--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <div> Git Commit </div>
+<p>Done with creating first repository and created new branches naren and raghava</p>
 </body>
 </html>
