added one more line in index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <div> Git Commit </div>
 <p>Done with creating first repository and created new branches naren and raghava</p>
+<p>added</p>
 </body>
 </html>
